[package]
name = "wallhaven"
version = "0.1.0"
authors = ["Alexsander_Startcev <alexandr.startsev@westwing.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.3"
clap = {version = "2.33.0", features = ["yaml"]}
serde_derive = "1.0.70"
serde = "1.0.70"
serde_json = "1.0.2"
