[package]
name = "wallhave_api"
version = "0.1.0"
authors = ["Norbytus <norbyt93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.70"
serde = "1.0.70"
serde_json = "1.0.2"
url_serde = "0.2.0"
surf = "1.0.1"
